--- a/TOR/stylestor/style.css
+++ b/TOR/stylestor/style.css
@@ -61,10 +61,9 @@ body, html {
   margin-left: -300px;
 }
 
-td,
-th {
+td, th {
   border: 1px solid rgb(190, 190, 190);
-  padding: 10px;
+  padding: 12px;
 }
   
 td {
